--- a/DPKamalnayanPortfolio/hugo.toml
+++ b/DPKamalnayanPortfolio/hugo.toml
@@ -1,4 +1,57 @@
 baseURL = 'https://DPKamalnayanPortfolio.github.io'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
 theme='hugo-theme-gallery'
+
+copyright = "© DP Kamalnayan"
+defaultContentLanguage = "en"
+disableKinds = ["taxonomy", "term"]
+enableRobotsTXT = true
+languageCode = "en"
+timeZone = "Europe/Berlin"
+timeout = "120s"
+title = "Home"
+
+[params]
+  defaultTheme = "dark"
+  description = "site for display of Projects"
+  title = "My Projects"
+  [params.author]
+    email = "nayanlamak.rm@gmail.com"
+    name = "DP Kamalnayan"
+  [params.socialIcons]
+    facebook = "https://www.facebook.com/"
+    instagram = "https://www.instagram.com/"
+    github = "https://github.com/DPKamalnayan"
+    youtube =  "https://www.youtube.com/" 
+    email = "mailto:nayanlamak.rm@gmail.com"
+    #website = "https://example.com"
+    #mastodon = "https://example.com"
+    #pixelfed = "https://example.com"
+
+[outputs]
+  home = ["HTML", "RSS"]
+  page = ["HTML"]
+  section = ["HTML"]
+
+[imaging]
+  quality = 75
+  resampleFilter = "CatmullRom"
+  [imaging.exif]
+    disableDate = false
+    disableLatLong = true
+    includeFields = "ImageDescription|Orientation"
+
+[module]
+  [module.hugoVersion]
+    min = "0.121.2"
+  #[[module.imports]]
+ #   path = "path = "github.com/nicokaiser/hugo-theme-gallery/v4""
+
+[menu]
+  [[menu.footer]]
+    name = "GitHub"
+    url = "https://github.com/nicokaiser/hugo-theme-gallery/"
+    weight = 3
+
+[services]
+  [services.rss]
+    limit = 100
